--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
         
-            </di    v>
+            </div>
         <div title="Mine projekter" class="page" id="page6">
                 <div class="left">
                     <h1>Nuværende projekter</h1>    
@@ -83,9 +83,9 @@
             
                   <div class="row row1">Denne her webside</div>
                   <div class="row row2">Min helt egen pomodoro app</div>
-                  <div class="row row3">Skal til at skrive Diho</div>
+                  <div class="row row3">Grid opgaver</div>
                   <div class="row row4">I mit teknologi fag laver vi et produkt ved navn Skraldespand 3000</div>
-                  <div class="row row5">I fremtiden ville jeg lave et spil</div>
+                  <div class="row row5">website template</div>
                 </div>
             </div>
 
